--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,27 @@
 Package: PSCBS
 ==============
 
+Version: 0.11.3 [2011-07-06]
+o ROBUSTNESS: Added a sanity check to estimateDeltaLOHByMinC1AtNonAB() for
+  PairedPSCBS object. The test asserts that there exist segments that are
+  not in allelic balance, which are needed in order to estimate DeltaLOH.
+o DOCUMENTATION: The description of argument 'chromosome' for 
+  segmentByPairedPSCBS() did not describe how to segment multiple
+  chromosomes in one call.
+
+
+Version: 0.11.2 [2011-07-05]
+o BUG FIX: Output fields 'tcnNbrOfSNPs'and 'tcnNbrOfHets' were 
+  mistakenly labelled as 'tcnNbrOr...'.  Thanks Christine Ho at
+  UC Berkeley for reporting on this.
+
+
+Version: 0.11.1 [2011-06-28]
+o DOCUMENTATION: Clarified that argument 'CT' should be tumor copy
+  number ratios relative to the normal.
+o DOCUMENTATION: Added Rd help for as.data.frame() of PairedPSCBS.
+
+
 Version: 0.11.0 [2011-06-14]
 o Renamed all column names of returned data frames such that
   they follow the camelCase naming conventions in addition
