--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,45 @@
 Package: PSCBS
 ==============
 
+Version: 0.11.7 [2011-07-15]
+o DOCUMENTATION: Added a section to help("segmentByPairedPSCBS") on
+  the importance of doing a whole-genome PSCBS segmentations if 
+  calling AB and LOH states afterward.
+o DOCUMENTATION: Made it more clear in help("segmentByPairedPSCBS")
+  that arguments 'betaT', 'betaN' and 'muN' may contain NAs for 
+  non-polymorphic loci.
+
+
+Version: 0.11.6 [2011-07-14]
+o BUG FIX/ROBUSTNESS: In some cases, the segmentation table would 
+  contain column names with incorrect capitalization, e.g. "tcnnbrOfLoci"
+  instead of "tcnNbrOfLoci".  This would cause several downstream 
+  methods to give an error.  The reason for this is that the Hmisc
+  package, if loaded after R.utils, overrides capitalize() in R.utils
+  with another (buggy?) capitalize() function.  To avoid this, we
+  now everywhere specify explicitly that we want the one in R.utils.
+  Thanks Christine To at University of Toronto for reporting on this.
+
+
+Version: 0.11.5 [2011-07-10]
+o ROBUSTNESS: Fixed partial argument matchings in arrowsC1C2() and
+  arrowsDeltaC1C2() for PairedPSCBS.
+o BUG FIX: tileChromosomes() for PairedPSCBS was still assuming the
+  old naming convention of column names.  This caused plotTracks()
+  to throw an exception when plotting multiple chromosomes.
+
+
+Version: 0.11.4 [2011-07-07]
+o GENERALIZATION: Now the internal estimator function that
+  estimateDeltaLOH() uses returns -Inf if all segments are called AB,
+  instead of throwing an exception.  This will in turn make callLOH()
+  call all segments to be non-LOH.
+o DOCUMENTATION: Removed obsolete references to the R-forge repository.
+o BUG FIX: Consecutive calls to callAB(..., force=TRUE) would append
+  additional 'abCall' columns to the segmentation table instead of
+  replacing existing calls.
+
+
 Version: 0.11.3 [2011-07-06]
 o ROBUSTNESS: Added a sanity check to estimateDeltaLOHByMinC1AtNonAB() for
   PairedPSCBS object. The test asserts that there exist segments that are
