--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,13 @@
 Package: PSCBS
 ==============
 
+Version: 0.16.0 [2011-11-12]
+o Added argument 'oma' and 'mar' to plotTracksManyChromosomes() for
+  PairedPSCBS for setting graphical parameters when 'add' == FALSE.
+o Added callROH().
+o Added arguments 'from' and 'adjustFor' to updateMeans().
+
+
 Version: 0.15.5 [2011-11-04]
 o BUG FIX: extractSegment() for AbstractCBS would give an error,
   because it called itself instead of extractSegments().
