--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,62 @@
 Package: PSCBS
 ==============
 
+Version: 0.35.6 [2013-08-01]
+o Updated the vignettes to utilize the new R.rsp features.
+
+
+Version: 0.35.5 [2013-07-19]
+o ROBUSTNESS: Added a sanity check on the estimates of (tauA, tauB)
+  when they are estimated from data in segmentByNonPairedPSCBS().
+
+
+Version: 0.35.4 [2013-07-11]
+o Updated the Makefile for the vignettes and added .Rinstignore such
+  that auxillary (bib and bst) LaTeX files are not installed but
+  part of the build so they are available to R CMD check, which
+  is recently needed by R devel.
+o Bumped up package dependencies.
+
+
+Version: 0.35.3 [2013-05-25]
+o Minor speedup by replacing all rm(x) with x <- NULL, cf. R-devel
+  thread 'Assigning NULL to large variables is much faster than rm() -
+  any reason why I should still use rm()?' on May 25, 2013.
+
+
+Version: 0.35.2 [2013-05-20]
+o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
+
+
+Version: 0.35.1 [2013-05-07]
+o Now estimateDeltaCN() for PairedPSCBS adjust for the ploidy if set.
+o Added ploidy() and ploidy()<- for AbstractCBS.
+o Now tileChromosomes() no longer gives warnings on "max(i): no
+  non-missing arguments to max; returning -Inf".
+
+
+Version: 0.35.0 [2013-04-23]
+o SPEEDUP: Now bootstrapTCNandDHByRegion() for PairedPSCBS always
+  estimates the default quantiles in addition to any requested ones.
+o SPEEDUP: Made bootstrapTCNandDHByRegion() much faster by adding
+  use.names=FALSE to two internal unlist() statements.
+o BUG FIX: updateMeans() for PairedPSCBS and NonPairedPSCBS could
+  include a signal from a neighboring segment when averaging, iff
+  that signal was located at the exact locus of the change point.
+  Thanks Ingrid Lönnstedt (WEHI) for reporting on this.
+
+
+Version: 0.34.9 [2013-04-22]
+o Utilizing new startupMessage() of R.oo.
+o BUG FIX: updateMeans() would not always preserve the originally
+  specified segment-mean level estimator, if different from a
+  (sample) mean estimator, e.g. avgDH="median".  This could result
+  in for instance callAB() failing on internal sanity checks.
+o BUG FIX: Segment levels drawn by plotTracks() would have incorrect
+  genomic locations for chromosome 2 and beyond.  This bug was
+  introduced in v0.34.7.
+
+
 Version: 0.34.8 [2013-04-20]
 o CLEANUP: Removed previously deprecated methods for AbstractCBS.
 
@@ -171,7 +227,7 @@ o Updated deprecated ggplot2 functions in the RSP reports.
 
 
 Version: 0.29.6 [2012-11-01]
-o Bumped the package dependencies.
+o Bumped up package dependencies.
 o CRAN POLICY: Made the examples run faster for R CMD check.
 
 
