--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,46 @@
 Package: PSCBS
 ==============
 
+Version: 0.38.4 [2013-10-15]
+o CLEANUP: Removed a few unnecessary NAMESPACE imports.
+o Bumped up package dependencies.
+
+
+Version: 0.38.3 [2013-10-14]
+o Now plotTracks() for CBS and PSCBS gives a more informative error if
+  'Clim' or 'Blim' is invalid.  If using "auto" (only for CBS) and the
+  limits could not be inferred due to an unknown or unset signal type,
+  an informative error message reports on this as well.
+o Now the package vignettes are in vignettes/ and not in inst/doc/,
+  which will not be supported by R (>= 3.1.0).
+o ROBUSTNESS: The overriding of append() to become a generic
+  function does now call base::append() in the default, instead
+  of copy the latter.  All this will eventually be removed,
+  when proper support for c, [, [[ etc. has been added everywhere.
+o CLEANUP: Now explicitly importing only what is needed in NAMESPACE.
+
+
+Version: 0.38.2 [2013-10-13]
+o BUG FIX: While attaching the package, it could cause a cyclic
+  loading of namespaces.
+
+
+Version: 0.38.1 [2013-10-08]
+o Now getSmoothLocusData() for CBS also returns column 'count' which
+  specifies the number of (finite) loci averaged over in each bin.
+o DOCUMENTATION: Vignette 'Total copy-number segmentation using CBS'
+  would display the same plot as vignette 'Parent-specific copy-number
+  segmentation using Paired PSCBS'.
+o DOCUMENTATION: Renamed vignette 'Paired PSCBS' to 'Parent-specific
+  copy-number segmentation using Paired PSCBS'.
+o BUG FIX: tileChromosomes() for CBS did not set "tiledChromosomes"
+  attribute due to a typo.  This caused plotTracks() for CBS to
+  horizontally misplace the plotted segment levels.
+  Added a system tests for this for CBS and PairedPSCBS objects.
+  Thanks to Ilari Scheinin at VUMC for reporting on this.
+o Bumped up package dependencies.
+
+
 Version: 0.38.0 [2013-09-27]
 o SPEEDUP: 'R CMD check' is now significantly faster due to
   copying of pre-generated calculatations ("memoization").
