--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,37 @@
 Package: PSCBS
 ==============
 
+Version: 0.40.4 [2014-02-04]
+o BUG FIX: all.equal() for CBS would pass the first/dispatch argument
+  to NextMethod() as 'target=target' and not as 'object=target', which
+  would result in it being passed it twice both named and non-named
+  where the latter would become argument 'tolerance=target' in an
+  internal call to all.equal() for numerics.  In recent R-devel version
+  this would generate "Error in all.equal.numeric(target[[i]],
+  current[[i]], check.attributes = check.attributes, : 'tolerance'
+  should be numeric  Calls: stopifnot ... all.equal.default ->
+  all.equal.list -> all.equal -> all.equal.numeric".
+
+
+Version: 0.40.3 [2014-01-29]
+o ROBUSTNESS: Now segmentByPairedPSCBS() asserts that argument 'muN'
+  is not all NAs.  Similarily, if 'muN' is called from 'betaN' the
+  same assertion is done after calling.
+
+
+Version: 0.40.2 [2013-12-17]
+o Now estimateDeltaCN() for CBS have the option to estimate the size
+  of a copy-number unit based on the change-point magnitutes, in
+  addition to the estimator based on the density of segment means.
+o BUG FIX: getChangePoints() for CBS returned empty results.
+
+
+Version: 0.40.1 [2013-12-09]
+o DOCUMENTATION: The CBS vignette referred to C1 and C2 in one of
+  the code examples.
+o Bumped up package dependencies.
+
+
 Version: 0.40.0 [2013-12-07]
 o CLEANUP: No longer need for an ad hoc NAMESPACE import.
 
